--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>switch</h1>
     <script>
       //switch .. case ..
-      let x = prompt ('masukan huruf a atau b)
+      let x = prompt ('masukan huruf a atau b')
       
       switch (x) {
           case 'a' :
