--- a/fungsi.html
+++ b/fungsi.html
@@ -21,7 +21,10 @@
       }
       hitungLuasKotak(8, 7)
       
-      //let input = prompt ('masukan namamu')  
+      let panjang = prompt ("masukan panjang:");
+      let lebar = prompt ("masukan lebar:");
+      hitungLuasKotak (panjang, lebar)
+       //let input = prompt ('masukan namamu')  
       //tampilkanPesan('asep')
      // tampilkanPesan('amir')
     </script>
