--- a/fungsi.html
+++ b/fungsi.html
@@ -17,9 +17,9 @@
       
       function hitungLuasKotak(panjang, lebar) {
         let luas = panjang * lebar
-        console.log ('luas kotak' + panjang + 'x' + lebar + '=' + luas)
+      //  console.log ('luas kotak' + panjang + 'x' + lebar + '=' + luas)
       }
-      hitungLuasKotak(8, 7)
+//hitungLuasKotak(8, 7)
       
       let panjang = prompt ("masukan panjang:");
       let lebar = prompt ("masukan lebar:");
